Fixed popover height on iOS

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -420,11 +420,12 @@ progress{
   bottom: 0;
   left: 0;
   background-color: transparent;
+  accent-color: var(--accent);
 }
 
 progress::-webkit-progress-bar {
   border-radius: 0;
-  background-color: transparent;
+  background-color: var(--shade-default);
 }
 
 progress::-webkit-progress-value {
@@ -449,7 +450,6 @@ progress::-moz-progress-bar {
     drop-shadow(0px 24px 24px rgba(0, 0, 0, 0.04));
   border-radius: 1rem;
 }
-
 
 .translation-popover{
   z-index: 2;
@@ -476,18 +476,6 @@ body.show-translation:not(.started) .translation-popover,
 body:not(.show-translation) [data-translation-text],
 body:not(.show-translation) [data-hide-translation]{
   display: none;
-}
-
-body:not(.started.show-translation) .translation-popover{
-  position: fixed;
-  top: auto;
-  bottom: 8rem;
-  padding: 0;
-  transform: none!important;
-}
-
-body.ios .translation-popover{
-  bottom: 11rem;
 }
 
 .translation-popover button[data-hide-translation]{
@@ -532,6 +520,7 @@ body.ios .translation-popover{
 
 .settings-popover input[type=range]{
   width: 100%;
+  accent-color: var(--accent);
 }
 
 /*input[type=range]::-webkit-slider-runnable-track{*/
